v9 2023-01-23

        * Lowered the minimum required CMake version to 3.7, unless unit-tests
          are built.

        * A type predicate strong::type_is_v<type, modifier> has been introduced.
          It can be used in compile time tests for generic code to ensure that
          a strong type has the necessary modifiers. Example:

          using type = strong::type<int, struct type_,
                                    strong::ordered,
                                    strong::ordered_with<int, long>>;
          static_assert(strong::type_is_v<type, strong::ordered>);
          static_assert(strong::type_is_v<type, strong::ordered_with<long>>);

          Note that for variadic modifiers like strong::ordered_with<>, the
          predicate ensures that all types listed in the test are supported,
          so in the example above, the test type_is_v<type, ordered_with<long>>
          is true because 'long' is included in the type definition using
          ordered_with<int, long>.

          There's also a type version, to use as
          strong::is_type<type, modifier>::value;

        * std::numeric_limits<T> is specialized for types using the
          strong::arithmetic modifier.

        * Added missing const&& overloads for value_of()

v8 2023-01-04

        * Split the header file into one file for each modifier. This can
          in some cases speed up compilation times considerably. The header
          file <strong_type/strong_type.hpp> still includes everything, so
          no changes to existing code is necessary.

        * Added new modifier scalable_with<Ts...>. Allows multiplication and
          division with each of the types Ts. If the underlying type can be
          divided, the result will be the first of the type in Ts.

        * difference types are conditionally ordered, if the underlying type
          supports it. Previously they were always ordered, but e.g. a 2D