@@ -1,3 +1,7 @@
+        * Corrected the test for, and use of, concepts when specializing
+          std::numeric_limits<> for strong::arithmetic types. Thank you
+          Björn Schäpers for reporting.
+
 v9 2023-01-23
 
         * Lowered the minimum required CMake version to 3.7, unless unit-tests
